...
    }

    BaseRefreshPaging(
        pagingItems = repoPagingItems,
        cacheItems = cacheRepoList,
        itemUi = { data, isRefresh ->
            RepoItem(data, isRefresh, navHostController) {
                onClickItem(data)
            }
        },
        onLoadError = onLoadError,
        onClickItem = {},
        headerItem = headerItem,
...
