...
    }

    BaseRefreshPaging(
        pagingItems = pagingItems,
        cacheItems = cacheList,
        itemUi = {data, isRefresh ->
            Column(modifier = Modifier.padding(8.dp).semantics { contentDescription = "RepoIssueItem" }) {
                ReposIssueItem(
                    data, isRefresh, navController
                ) {
                    onClickItem(data)
                }
            }
...
